k8s/choi.sw/auth.yml
apiVersion: v1
kind: Service
metadata:
  name: auth
  namespace: foo
  labels:
    app: auth
spec:
  ports:
    - port: 9080
      targetPort: 9080
      name: http
  selector:
    app: auth
---
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  name: auth-v1
  namespace: foo
spec:
  replicas: 1
  template:
    metadata:
      labels:
        app: auth
        version: v1
    spec:
      containers:
        - name: auth
          image: mura2393/istio-auth:latest
          imagePullPolicy: Always
          ports:
            - containerPort: 9080
