k8s/choi.sw/destination_e2e.yml
apiVersion: networking.istio.io/v1alpha3
kind: Gateway
metadata:
  name: front-gateway
  namespace: foo
spec:
  selector:
    istio: ingressgateway # use Istio default gateway implementation
  servers:
  - port:
      number: 80
      name: http
      protocol: HTTP
    hosts:
    - "*"
---
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: front-blue
  namespace: foo
spec:
  hosts:
  - "blue.local.istio.com"
  gateways:
  - front-gateway
  http:
  - headers:
      response:
        add:
          target: blue
    route:
    - destination:
        port:
          number: 8080
        host: front.foo.svc.cluster.local
  - route:
    - destination:
        port:
          number: 8080
        host: front.foo.svc.cluster.local
---
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: front-green
  namespace: foo
spec:
  hosts:
  - "green.local.istio.com"
  gateways:
  - front-gateway
  http:
  - headers:
      response:
        add:
          target: green
    route:
    - destination:
        port:
          number: 8080
        host: front.foo.svc.cluster.local
  - route:
    - destination:
        port:
          number: 8080
        host: front.foo.svc.cluster.local
