k8s/choi.sw/minikube-ingress.yml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: example-ingress
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
 rules:
 - host: blue.local.istio.com
   http:
     paths:
     - path: /*
       backend:
         serviceName: istio-ingressgateway
         servicePort: 31380
